--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,7 +1,14 @@
+// 暗色背景1
 $dark-background: #1c1e21;
-$dark-color: #a2a2a2;
+// 暗色背景2
+$dark-background2: #a2a2a2;
+// 亮色背景1
 $light-background: #fff;
-$light-background: #a2a2a2;
+// 亮色背景2
+$light-background2: #a2a2a2;
+// 颜色大部分文字初始颜色
+$color: royalblue;
+
 // 暗色主题
 $dark-theme: (
   // 背景颜色
